# ottapiv2

./: .gitignore  CLAUDE.md  requirements.txt
deploy/: SPORT_EVENTS_SETUP.md  ottapi-sport-events-cleanup.service  ottapi-sport-events-cleanup.timer  ottapi-sport-events.service  ottapi-sport-events.timer  ottapi-v2.service  sudoers.d-ottapi-sport-events
migrations/: 2026-06-25-add-domains-refreshed-at-to-providers.sql  2026-06-25-add-is-adult-to-categories.sql  ops-remove-duplicate-provider-11.sql
src/: config.py  database.py  main.py  models.py
src/routers/: _admin_auth.py  admin_landing.py  admin_pressure.py  admin_providers.py  admin_sport_events.py  admin_sync.py  admin_users.py  auth.py  (+8 more)
tv-app/: .env.production  index.html  package-lock.json  package.json  vite.config.ts
tv-app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
tv-app/src-tauri/capabilities/: default.json
tv-app/src-tauri/plugins/native-player/: Cargo.toml  INTEGRATION.md  build.rs
tv-app/src-tauri/plugins/native-player/android/: build.gradle.kts  proguard-rules.pro
tv-app/src-tauri/plugins/native-player/android/src/main/: AndroidManifest.xml
tv-app/src-tauri/plugins/native-player/android/src/main/java/fr/smartbunker/symbioplayer/nativeplayer/: ChannelData.kt  EpgService.kt  ExoPlayerManager.kt  InlinePreviewManager.kt  LiveOverlayManager.kt  NativePlayerPlugin.kt  PlayerActivity.kt  SubtitleManager.kt  VodOverlayManager.kt
tv-app/src-tauri/plugins/native-player/android/src/main/res/drawable/: bg_badge_upcoming.xml  bg_catchup_btn.xml  bg_control_btn.xml  bg_control_btn_playpause.xml  bg_epg_slot.xml  bg_nav_btn.xml  bg_seek_thumb.xml  bg_vod_controls_panel.xml  bg_vod_submenu_panel.xml  bg_vod_subtitle_cue.xml
tv-app/src-tauri/plugins/native-player/android/src/main/res/layout/: activity_player.xml  overlay_live.xml  overlay_vod.xml
tv-app/src-tauri/plugins/native-player/android/src/main/res/values/: colors.xml  strings.xml  styles.xml
tv-app/src-tauri/plugins/native-player/permissions/: default.toml  inline-preview.toml  start-player.toml
tv-app/src-tauri/plugins/native-player/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs
tv-app/src-tauri/plugins/native-player/templates/: MainActivity.kt
tv-app/src-tauri/src/: lib.rs  main.rs
(+94 files in other folders)
