[package]
name = "symbioplayer"
version = "0.1.0"
description = "Symbioplayer TV App"
authors = ["d4nt1"]
edition = "2021"

# Mobile builds need a `cdylib` (the Android JNI side loads the Rust core
# as a shared library); desktop builds use the binary in src/main.rs.
# Keeping `staticlib` + `rlib` lets cargo produce all three artifact
# types from one crate without per-target configuration.
[lib]
name = "symbioplayer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
