[package]
name = "tauri-plugin-native-player"
version = "0.1.0"
edition = "2021"
description = "Symbioplayer native (Android) player plugin — wraps ExoPlayer for live + VOD playback."
authors = ["d4nt1"]
links = "tauri-plugin-native-player"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
log = "0.4"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
